--- a/src/python/snap/snapcraft.yaml
+++ b/src/python/snap/snapcraft.yaml
@@ -1,24 +1,27 @@
-name: foglamp # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: foglamp
+version: 0.1
+summary: foglamp main
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
-
-grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: devmode # use 'strict' once you have the right plugs and slots
+  foglamp is a robust solution for IoT device data routing
+grade: devel
+confinement: devmode
 
 apps:
   foglamp:
-    command: "python3 foglamp.core.server_daemon.py"
+    command: foglamp
 
 parts:
-  fogl:
-    source: https://github.com/foglamp/FogLAMP.git
-    source-type: git
-    source-branch: develop
+  foglamp:
+    source: .
     plugin: python
     python-version: python3
-    requirements: src/python/requirements.txt
+    requirements: ./requirements.txt
+
+#parts:
+#  fogl:
+#    source: https://github.com/foglamp/FogLAMP.git
+#    source-type: git
+#    source-branch: develop
+#    plugin: python
+#    python-version: python3
+#    requirements: src/python/requirements.txt
